# tatimoreira-blog

./: .gitignore  Cargo.toml  Dockerfile  vercel.json
api/: ssg.rs
content/: hello-rust.md  hello_world.md  ssg.md
public/: hello-rust.html  index.html  ssg.html
src/: graphql.rs  main.rs  templates.rs
src/templates/: template.rs
templates/: base.html  home.html  post.html
