[package]
name = "rust_static_site_generator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
anyhow = "1"
pulldown-cmark = "0.8.0"
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
hotwatch = "0.5"