[package]
name = "tatimoreira-blog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssg"
path = "src/main.rs"

[[bin]]
name = "graphql"
path = "api/ssg.rs"

[dependencies]
vercel_runtime = "1"
async-graphql = { version = "6", features = ["chrono"] }
pulldown-cmark = "0.8.0"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
